--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
         context: .
         args:
           - WAR_FILE=tasks-frontend/target/tasks.war
-          - CONTEXT=tasks
+          - CONTEXT=tasks.war
     networks:
       - prod_net_front
     ports:
