--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,8 @@ services:
     build:
         context: .
         args:
-          - WAR_FILE=tasks-frontend/target/tasks.war
-          - CONTEXT=tasks.war
+          - WAR_FILE=frontend/target/tasks.war
+          - CONTEXT=tasks
     networks:
       - prod_net_front
     ports:
